fixed some alignment issues

--- a/style/style.sass
+++ b/style/style.sass
@@ -82,7 +82,6 @@ p
     margin: 0 auto
     padding: 0
 
-
 #menu ul 
     float: right
     padding: 20px 0px 0px 0px
@@ -177,15 +176,13 @@ p
         text-align: center
         
     #introduction
-        text-align: center
+        margin-left: 0
         max-width: 500px
-        display: inline
         text-align: center
 
     #introduction 
         p
             text-align: center
-            max-width: 500px
         
     #header
         text-align: center
